# gogurl

./: .dummy  .gitignore  .travis.yml  LICENSE  README.md  gogurl.cabal  gourl.cabal  mkdb.sh  stack.yaml
app/: Main.hs
db/: links.sql
src/Gogurl/: Sqlite.hs
test/: Main.hs
utils/: README.md  addgo  editgo  getgo  listgo  rmgo
