name:                gogurl
version:             0.2.0.0
synopsis:            Shortens URLs and redirects you
description:         gogurl provides a server that remembers short names for common URLs
homepage:            https://github.com/jayed/gogurl#readme
license:             BSD3
license-file:        LICENSE
author:              Jay Edwards
maintainer:          jay@sentenai.com
copyright:           2018 Sentenai
category:            Utilities
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable gogurl
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Spock >= 0.11
                     , mtl
                     , text
                     , datetime
                     , aeson
                     , time
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , persistent-template

