name:                gogurl
version:             0.2.1.0
synopsis:            Shortens URLs and redirects you
description:         gogurl provides a server that remembers short names for common URLs
homepage:            https://github.com/jayed/gogurl#readme
license:             BSD3
license-file:        LICENSE
author:              Jay Edwards
maintainer:          jay@sentenai.com
copyright:           2018 Sentenai
category:            Utilities
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base
                     , direct-sqlite
                     , sqlite-simple
                     , template-haskell
                     , text
  exposed-modules:     Gogurl.Sqlite

executable gogurl
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , gogurl
                     , optparse-applicative
                     , resource-pool
                     , scotty
                     , text

test-suite gogurl-app-tests
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , HUnit
                     , managed
                     , process
                     , temporary
